Archive2/1e/12486c572e6762/output
main.cpp: In function 'int main()':
main.cpp:9:10: error: assigning to an array from an initializer list
     c[i] = { a, b };
          ^
